; ModuleID = '/home/carl/AnghaBench/git/extr_diffcore-rename.c_locate_rename_dst.c'
source_filename = "/home/carl/AnghaBench/git/extr_diffcore-rename.c_locate_rename_dst.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.diff_rename_dst = type { i32 }
%struct.diff_filespec = type { i32 }

@rename_dst = common dso_local global %struct.diff_rename_dst* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.diff_rename_dst* (%struct.diff_filespec*)* @locate_rename_dst to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.diff_rename_dst* @locate_rename_dst(%struct.diff_filespec* %0) #0 {
  %2 = alloca %struct.diff_filespec*, align 8
  %3 = alloca i32, align 4
  store %struct.diff_filespec* %0, %struct.diff_filespec** %2, align 8
  %4 = load %struct.diff_filespec*, %struct.diff_filespec** %2, align 8
  %5 = call i32 @find_rename_dst(%struct.diff_filespec* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %14

9:                                                ; preds = %1
  %10 = load %struct.diff_rename_dst*, %struct.diff_rename_dst** @rename_dst, align 8
  %11 = load i32, i32* %3, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds %struct.diff_rename_dst, %struct.diff_rename_dst* %10, i64 %12
  br label %14

14:                                               ; preds = %9, %8
  %15 = phi %struct.diff_rename_dst* [ null, %8 ], [ %13, %9 ]
  ret %struct.diff_rename_dst* %15
}

declare dso_local i32 @find_rename_dst(%struct.diff_filespec*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
